<package format="2">
  <name>cartographer_kitti_config</name>
  <version>0.1.0</version>
  <description>
    Cartographer configurations and launch files for the KITTI dataset.
  </description>
  <maintainer email="enddl22@gmail.com">
    Inkyu Sa
  </maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>g++-static</build_depend>

  <depend>cartographer_ros</depend>
  <depend>message_runtime</depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>

  <test_depend>rosunit</test_depend>
</package>